# ml-experiment-analyst-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci.yml
config/: issues_phase0.yaml  issues_phase1.yaml  issues_phase2.yaml  issues_phase3.yaml  issues_phase4.yaml  issues_phase5.yaml  issues_phase6.yaml  issues_phase7.yaml  labels.yaml  milestones.yaml
docs/: SETUP.md  architecture-decisions.md  demo-experiments.md  governance.md  hitl.md  observability.md  prompt-engineering-log.md  tools-reference.md  troubleshooting.md  usage-guide.md
scripts/: run_demo.py  run_demo_hitl.py  seed_mlflow.py  smoke_test_tools.py
scripts/bootstrap/: bootstrap.sh  create_issues.sh  create_labels.sh  create_milestones.sh  create_templates.sh
src/agent/: builder.py  config.py
src/analysis/: metrics.py  overfitting.py  patterns.py  suggestions.py
src/dashboard/: app.py  log_reader.py
src/mlflow_client/: client.py  models.py
src/observability/: __init__.py  governance.py  langsmith.py
src/report/: generator.py
src/tools/: __init__.py  analyze_patterns.py  compare_runs.py  diagnose_run.py  generate_report.py  load_experiment.py  suggest_next_experiments.py  web_search.py
tests/edge_cases/: test_edge_analysis.py  test_edge_tools.py
tests/integration/: conftest.py  test_agent_e2e.py
tests/unit/: test_analysis.py  test_builder.py  test_config_governance.py  test_governance.py  test_langsmith.py  test_log_reader.py  test_mlflow_client.py  test_placeholder.py  test_report_generator.py  (+2 more)
(+2 files in other folders)
